--- a/app/src/main/res/layout/fragment_shared_preferences.xml
+++ b/app/src/main/res/layout/fragment_shared_preferences.xml
@@ -44,7 +44,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/txt_content"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
