--- a/app/src/main/res/layout/fragment_room.xml
+++ b/app/src/main/res/layout/fragment_room.xml
@@ -78,7 +78,7 @@
         app:layout_constraintTop_toBottomOf="@+id/et_last_name" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_select"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -90,7 +90,7 @@
         app:layout_constraintTop_toBottomOf="@+id/et_phone" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btn_insert"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -99,7 +99,7 @@
         android:text="Insert"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_select" />
 
     <Button
         android:id="@+id/button4"
@@ -111,10 +111,10 @@
         android:text="Update"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_insert" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btn_delete"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
